--- a/style.css
+++ b/style.css
@@ -3,9 +3,10 @@
   padding: 0;
   box-sizing: border-box;
 }
-.game-board {
+.Home {
   width: 80%;
   height: 500px;
-  border: 1px solid #000;
-  margin: 0 auto;
+  position: absolute;
+  top: 150px;
+  left: 50px;  
 }
