--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 html, body {
   margin: 0;
   padding: 0;
+  background: #000000;
 }
 canvas {
   display: block;
@@ -49,5 +50,5 @@ h1{
   top: 0px;
   width:1920px;
   height:700px;
-  opacity:0.1;
+  opacity:0.35;
 }
