--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ h1{
   font-size: 30px;
   top: 890px;
   left: 50px;
-  color: #174e85;
+  color: #ff0000;
   font-family: 'Gabarito';
   opacity:1;
 }
