--- a/style.css
+++ b/style.css
@@ -61,3 +61,11 @@ h1{
   height:920px;
   opacity:0.35;
 }
+
+.voltar{
+  max-width: 50px;
+  max-height: 50px;
+  position: absolute;
+  top: 15px;
+  left: 200px;
+}
